# advent-of-code

./: .gitignore
2020/.template/src/: main.rs
2020/01/: Cargo.toml
2020/01/src/: main.rs  with_itertools.rs
2020/02/: Cargo.toml
2020/02/src/: main.rs
2020/03/: Cargo.toml
2020/03/src/: main.rs
2020/04/: Cargo.toml
2020/04/src/: main.rs  passport.rs
2020/05/: Cargo.toml
2020/05/src/: main.rs
2020/06/: Cargo.toml
2020/06/src/: main.rs
2020/07/src/: graph.rs  main.rs
2020/08/src/: main.rs
2020/09/src/: main.rs
2020/10/src/: main.rs
2020/11/src/: main.rs
2020/12/src/: main.rs
2020/13/: Cargo.toml
2020/13/input/: example
2020/13/src/: main.rs
2020/14/: Cargo.toml
2020/14/src/: main.rs
2020/15/: Cargo.toml
2020/15/src/: iterative.rs  main.rs
2020/16/: Cargo.toml
2020/16/src/: main.rs  ticket.rs  ticket_field.rs
2020/17/: Cargo.toml
2020/17/src/: main.rs
2020/18/: Cargo.toml
2020/18/src/: main.rs
2020/19/src/: main.rs
2020/20/: Cargo.toml  sol.py
2020/20/src/: main.rs  picture.rs  tile.rs
2021/01/src/: main.rs
2021/02/src/: main.rs
2021/03/src/: main.rs
2021/05/src/: main.rs
2021/06/src/: main.rs
2021/07/src/: main.rs
2021/08/: Cargo.toml
2021/09/: scratch
2021/10/: Cargo.toml
2021/util/: Cargo.toml
2022/: .gitignore  Cargo.toml
2022/01/: Cargo.toml
2022/01-zig/: build.zig  readme.md
2022/02/: Cargo.toml
2022/03/: Cargo.toml
2022/04/: Cargo.toml
2022/05/: Cargo.toml
2022/06/: Cargo.toml
2022/07/: Cargo.toml
2022/aoc/: Cargo.toml
2022/template/: Cargo.toml
(+20 files in other folders)
