[package]
name = "advent-of-code-2020-01"
version = "0.1.0"
authors = ["Chris Burgess <9002722+cgburgess@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"

[[bin]]
name = "with_itertools"
path = "src/main.rs"